--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,7 @@
 body {
     background-color: #FDB927;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
     height: 100vh;
 }
 
@@ -23,4 +22,15 @@ header {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.084);
     font-size: 1.4em;
     text-align: center;
+}
+
+.contenedores {
+    display: flex;
+    justify-content: center;
+    width: 450px;
+    height: 250px;
+    margin: auto;
+    padding: 10px;
+    border: 2px solid black;
+    margin-top: 10em;
 }
