--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,9 @@
 body {
     background-color: #FDB927;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
 }
 
@@ -24,6 +26,13 @@ header {
     text-align: center;
 }
 
+.espacio {
+    display: flex;
+    flex-direction: row;
+    gap: 3em;
+    margin-bottom: 3em;
+}
+
 .contenedores {
     display: flex;
     justify-content: center;
@@ -32,5 +41,9 @@ header {
     margin: auto;
     padding: 10px;
     border: 2px solid black;
-    margin-top: 10em;
+}
+
+p {
+    text-align: center;
+    border-bottom: .5em solid #552583;
 }
